--- a/src/ch/imedias/rsccfx/localization/Bundle.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle.properties
@@ -66,8 +66,8 @@ statusBoxServiceStopped=Service stopped
 
 #PopOver
 supportHelpLbl=Key generation - connection establishment\n\nTo establish a connection between you and your supporter, you have to generate a key and hand it to your supporter. Your supporter will use this key to connect to your device.\n\nStatus bar\n\nThe status bar at the end of the window shows if there is the possibility to create a connection.\n\nGreen: Possible to establish connection.\nOrange: Not yet possible to establish connection.\n\nPlease contact your supporter if it is not possible to create a connection.
-requestHelpLbl=Key input - connection establishment\n\nTo establish a connection you need your partners generated key. Enter the key in the text field on the left and click on \u0022Connect\u0022 to establish a connection.\n\nStatus bar\n\nThe status bar at the end of the window shows if there is the possibility to create a connection.\n\nGreen: Possible to establish connection.\nOrange: Not yet possible to establish connection.\n\nPlease contact imedias if it is not possible to create a connection.
-homeHelpLbl=Here you can choose between the options \u0022I need help\u0022 and \u0022I want to help someone\u0022.\n\nClick on \u0022I need help\u0022 if a supporter should connect to your device.\n\nClick on \u0022I want to help someone\u0022 if you want to connect to a computer from someone you want to help out.
+requestHelpLbl=Key input - connection establishment\n\nTo establish a connection you need your partners generated key. Enter the key in the text field on the left and click on "Connect" to establish a connection.\n\nStatus bar\n\nThe status bar at the end of the window shows if there is the possibility to create a connection.\n\nGreen: Possible to establish connection.\nOrange: Not yet possible to establish connection.\n\nPlease contact imedias if it is not possible to create a connection.
+homeHelpLbl=Here you can choose between the options "I need help" and "I want to help someone".\n\nClick on "I need help" if a supporter should connect to your device.\n\nClick on "I want to help someone" if you want to connect to a computer from someone you want to help out.
 
 #Dialog
 dialogTitleText=Supporter Details
@@ -98,3 +98,6 @@ expertStunServerPortLbl=Stunserver port
 expertStunserverLbl=Stunservers
 expertSettingsBtn=Expert settings
 settingsTitleLbl=Expert settings
+
+# Supporter
+supporterNameInformationDialog=Please fill out the name field.
