--- a/src/ch/imedias/rsccfx/localization/Bundle_de.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_de.properties
@@ -4,15 +4,15 @@ connectingTo=Verbinde mit {0}
 connectionFailed=Die Verbindung ist fehlgeschlagen.
 description=Beschreibung
 editDialogCancelButtonText=Abbrechen
-editDialogDefaultButtonToolTipText=auf Voreinstellung zur\u00fccksetzen
-editDialogDeleteButtonToolTipText=ausgew\u00e4hlte Adressen l\u00f6schen
-editDialogDownButtonToolTipText=ausgew\u00e4hlte Adressen nach unten bewegen
-editDialogInsertButtonToolTipText=Adresse einf\u00fcgen
+editDialogDefaultButtonToolTipText=auf Voreinstellung zur\u00FCcksetzen
+editDialogDeleteButtonToolTipText=ausgew\u00E4hlte Adressen l\u00F6schen
+editDialogDownButtonToolTipText=ausgew\u00E4hlte Adressen nach unten bewegen
+editDialogInsertButtonToolTipText=Adresse einf\u00FCgen
 editDialogTitle=Support-Adressen bearbeiten
-editDialogUpButtonToolTipText=ausgew\u00e4hlte Adressen nach oben bewegen
-encryption=Verschl\u00fcsselung
+editDialogUpButtonToolTipText=ausgew\u00E4hlte Adressen nach oben bewegen
+encryption=Verschl\u00FCsselung
 error=Fehler
-errorNoPort={0} ist keine g\u00fcltige Portnummer
+errorNoPort={0} ist keine g\u00FCltige Portnummer
 remoteSupportDialogCancelButtonText=Beenden
 remoteSupportDialogConnectButtonText=Verbinden
 remoteSupportDialogTitle=Fernwartung
@@ -22,7 +22,7 @@ remoteSupportFrameDisconnectButtonText=Trennen
 remoteSupportFrameEditButtonToolTipText=Liste bearbeiten
 remoteSupportFrameOfferSupportPanelTabConstraintsTabTitle=Anbieten
 remoteSupportFramePicturePropertiesPanelBorderTitle=Bildeigenschaften
-remoteSupportFrameQualityLabelText=Qualit\u00e4t
+remoteSupportFrameQualityLabelText=Qualit\u00E4t
 remoteSupportFrameScaleLabelText=Bildskalierung
 remoteSupportFrameSecurePortsLabelText=Sichere Ports:
 remoteSupportFrameSecurePortsTextFieldToolTipText=kommaseparierte Portliste
@@ -38,34 +38,34 @@ homeSupportBigLbl=Ich m\u00F6chte helfen
 homeSupportSmallLbl=Jemand ben\u00F6tigt meine Hilfe
 
 # RequestView
-requestTitleLbl=Schl\u00fcssel generieren
-requestDescriptionLbl=W\u00e4hlen Sie den Supporter, welcher Sie unterst\u00fctzen soll. Sie k\u00F6nnen auch neue Supporter hinzuf\u00fcgen oder einen bestehenden editieren. Kontaktieren Sie Ihren Supporter f\u00fcr die Einstellungsdetails.
-requestKeyGeneratorPane=Schl\u00fcsselgenerierung
-requestGeneratedKeyFld=Schl\u00fcssel wird generiert...
+requestTitleLbl=Schl\u00FCssel generieren
+requestDescriptionLbl=W\u00E4hlen Sie den Supporter, welcher Sie unterst\u00FCtzen soll. Sie k\u00F6nnen auch neue Supporter hinzuf\u00FCgen oder einen bestehenden editieren. Kontaktieren Sie Ihren Supporter f\u00FCr die Einstellungsdetails.
+requestKeyGeneratorPane=Schl\u00FCsselgenerierung
+requestGeneratedKeyFld=Schl\u00FCssel wird generiert...
 requestPredefinedAdressessPane=Adressbuch
 requestStatusLblWaiting=Warte...
 requestStatusLblReady=Bereit
-requestSupporterDescriptionLbl=W\u00e4hlen Sie den Supporter, welcher Sie unterst\u00fctzen soll. Sie k\u00F6nnen auch neue Supporter hinzuf\u00fcgen oder einen bestehenden editieren. Kontaktieren Sie Ihren Supporter f\u00fcr die Einstellungsdetails.
+requestSupporterDescriptionLbl=W\u00E4hlen Sie den Supporter, welcher Sie unterst\u00FCtzen soll. Sie k\u00F6nnen auch neue Supporter hinzuf\u00FCgen oder einen bestehenden editieren. Kontaktieren Sie Ihren Supporter f\u00FCr die Einstellungsdetails.
 
 # SupportView
-supportTitleLbl=Schl\u00fcssel eingeben
-supportDescriptionLbl=Initialisiert eine neue Fernwartung durch die Eingabe des generierten Schl\u00fcssels Ihres Partners
+supportTitleLbl=Schl\u00FCssel eingeben
+supportDescriptionLbl=Initialisiert eine neue Fernwartung durch die Eingabe des generierten Schl\u00FCssels Ihres Partners
 supportConnectBtn=Verbinden
-supportKeyInputPane=Schl\u00fcsseleingabe
+supportKeyInputPane=Schl\u00FCsseleingabe
 supportAdressBookPane=Dienst starten
 supportStatusLblWaiting=Warte...
 supportStatusLblReady=Bereit
 
 #StartServiceView
 startServiceDescpriptionLbl=Damit Ihr Partner durch das Adressbuch eine direkte Verbindung zu Ihnen herstellen kann, muss hier zuerst der Dienst gestartet werden.
-statusBoxServiceIdle=Dienst läuft nicht
+statusBoxServiceIdle=Dienst l\uFFFDuft nicht
 statusBoxServiceStarted=Dienst wurde gestartet
 statusBoxServiceStopped=Dienst wurde gestoppt
 
 #PopOver
-homeHelpLbl=Hier k\u00F6nnen Sie zwischen den Optionen \u0022Ich ben\u00F6tige Hilfe\u0022 und \u0022Ich m\u00F6chte helfen\u0022 ausw\u00e4hlen.\n\nKlicken Sie auf \u0022Ich ben\u00F6tige Hilfe\u0022 falls sich ein Supporter auf Ihr Ger\u00e4t verbinden soll.\n\nKlicken Sie auf \u0022Ich m\u00F6chte jemandem helfen\u0022 falls Sie sich als Supporter auf einen anderen Computer verbinden m\u00F6chten.
-supportHelpLbl=Schl\u00fcsseleingabe - Verbindungsaufbau\n\nUm eine Verbindung zu Ihrem Partner aufzubauen, ben\u00F6tigen Sie dessen generierten Schl\u00fcssel.\nTragen Sie den Schl\u00fcssel in das Textfeld auf der linken Seite ein und klicken Sie dann auf \u0022Verbinden\u0022 um eine Verbindung herzustellen.\n\nStatusbar\nDie Statusbar am Ende des Fensters zeigt Ihnen an, ob eine Verbindung m\u00F6glich ist.\nGr\u00fcn: Verbindungsaufbau m\u00F6glich\nOrange: Verbindungsaufbau noch nicht m\u00F6glich.\n\nBitte kontaktieren Sie imedias, falls der Verbindungsaufbau nicht m\u00F6glich ist.
-requestHelpLbl=Schl\u00fcsselgenerierung - Verbindungsaufbau\n\nZur Herstellung einer Verbindung mit Ihrem Supporter m\u00fcssen Sie einen Schl\u00fcssel generieren. \nTeilen Sie diesen Ihrem Supporter mit. Er ben\u00F6tigt Ihren Schl\u00fcssel um eine Verbindung herzustellen. \n\nStatusbar\nDie Statusbar am Ende des Fensters zeigt Ihnen an, ob eine Verbindung m\u00F6glich ist. \nGr\u00fcn: Verbindungsaufbau m\u00F6glich\nOrange: Verbindungsaufbau noch nicht m\u00F6glich.\n\nBitte kontaktieren Sie Ihren Supporter, falls der Verbindungsaufbau nicht m\u00F6glich ist.
+homeHelpLbl=Hier k\u00F6nnen Sie zwischen den Optionen "Ich ben\u00F6tige Hilfe" und "Ich m\u00F6chte helfen" ausw\u00E4hlen.\n\nKlicken Sie auf "Ich ben\u00F6tige Hilfe" falls sich ein Supporter auf Ihr Ger\u00E4t verbinden soll.\n\nKlicken Sie auf "Ich m\u00F6chte jemandem helfen" falls Sie sich als Supporter auf einen anderen Computer verbinden m\u00F6chten.
+supportHelpLbl=Schl\u00FCsseleingabe - Verbindungsaufbau\n\nUm eine Verbindung zu Ihrem Partner aufzubauen, ben\u00F6tigen Sie dessen generierten Schl\u00FCssel.\nTragen Sie den Schl\u00FCssel in das Textfeld auf der linken Seite ein und klicken Sie dann auf "Verbinden" um eine Verbindung herzustellen.\n\nStatusbar\nDie Statusbar am Ende des Fensters zeigt Ihnen an, ob eine Verbindung m\u00F6glich ist.\nGr\u00FCn: Verbindungsaufbau m\u00F6glich\nOrange: Verbindungsaufbau noch nicht m\u00F6glich.\n\nBitte kontaktieren Sie imedias, falls der Verbindungsaufbau nicht m\u00F6glich ist.
+requestHelpLbl=Schl\u00FCsselgenerierung - Verbindungsaufbau\n\nZur Herstellung einer Verbindung mit Ihrem Supporter m\u00FCssen Sie einen Schl\u00FCssel generieren. \nTeilen Sie diesen Ihrem Supporter mit. Er ben\u00F6tigt Ihren Schl\u00FCssel um eine Verbindung herzustellen. \n\nStatusbar\nDie Statusbar am Ende des Fensters zeigt Ihnen an, ob eine Verbindung m\u00F6glich ist. \nGr\u00FCn: Verbindungsaufbau m\u00F6glich\nOrange: Verbindungsaufbau noch nicht m\u00F6glich.\n\nBitte kontaktieren Sie Ihren Supporter, falls der Verbindungsaufbau nicht m\u00F6glich ist.
 
 #Dialog
 dialogTitleText=Supporter Details
@@ -74,20 +74,20 @@ dialogAddressText=Addresse
 dialogPortText=Port
 dialogImageText=Bild
 dialogChargeableLbl=Kostenpflichtig
-dialogEncryptedLbl=Verschl\u00fcsselt
+dialogEncryptedLbl=Verschl\u00FCsselt
 
 #Setting
 supportCompressionLbl=Kompression
-supportQualityLbl=Qualit\u00e4t
+supportQualityLbl=Qualit\u00E4t
 supportBgr233Lbl=BGR233
-requestViewOnlyLbl=Nur Bild \u00fcbertragen
-bgr233DescriptionLbl=Diese Option verringert die Qualit\u00e4t der \u00dcbertragung.
+requestViewOnlyLbl=Nur Bild \u00FCbertragen
+bgr233DescriptionLbl=Diese Option verringert die Qualit\u00E4t der \u00DCbertragung.
 
 #ExpertSettings
 expertSettingsDialogTitle=Experteneinstellungen
-expertForceConnectOverServerLbl=Verbindung \u00fcber Server erzwingen
-expertKeyserverIpLbl=Schl\u00fcsselserver IP-Addresse
-expertKeyserverHttpLbl=Schl\u00fcsselserver HTTP-Port
+expertForceConnectOverServerLbl=Verbindung \u00FCber Server erzwingen
+expertKeyserverIpLbl=Schl\u00FCsselserver IP-Addresse
+expertKeyserverHttpLbl=Schl\u00FCsselserver HTTP-Port
 expertVncPortLbl=VNC Port
 expertIcePortLbl=ICE Port
 expertUdpPackageSizeLbl=UDP Paketgr\u00F6sse
@@ -96,3 +96,6 @@ expertStunServerPortLbl=Stunserver Port
 expertStunserverLbl=Stunservers
 expertSettingsBtn=Experteneinstellungen
 settingsTitleLbl=Experteneinstellungen
+
+# Supporter
+supporterNameInformationDialog=Bitte f\u00FCllen Sie das Namensfeld aus.
