--- a/src/ch/imedias/rsccfx/localization/Bundle_it.properties
+++ b/src/ch/imedias/rsccfx/localization/Bundle_it.properties
@@ -12,7 +12,7 @@ editDialogTitle=Modifica indirizzi di supporto
 editDialogUpButtonToolTipText=sposta in alto indirizzi selezionati
 encryption=Crittografia
 error=Errore
-errorNoPort={0} numero porta non \u00e8 valido
+errorNoPort={0} numero porta non \u00E8 valido
 remoteSupportDialogCancelButtonText=Esci
 remoteSupportDialogConnectButtonText=Connetti
 remoteSupportDialogSupportAddressLabelText=Assistente
@@ -22,8 +22,8 @@ remoteSupportFrameCompressionLabelText=Compressione
 remoteSupportFrameDisconnectButtonText=Disconnetti
 remoteSupportFrameEditButtonToolTipText=modifica elenco
 remoteSupportFrameOfferSupportPanelTabConstraintsTabTitle=Offerta
-remoteSupportFramePicturePropertiesPanelBorderTitle=Propriet\u00e0 dell'immagine
-remoteSupportFrameQualityLabelText=Qualit\u00e0
+remoteSupportFramePicturePropertiesPanelBorderTitle=Propriet\u00E0 dell'immagine
+remoteSupportFrameQualityLabelText=Qualit\u00E0
 remoteSupportFrameScaleLabelText=Ridimensionamento immagine
 remoteSupportFrameSecurePortsLabelText=Porte sicure:
 remoteSupportFrameSecurePortsTextFieldToolTipText=elenco porte separato da virgola
@@ -42,30 +42,30 @@ homeSupportSmallLbl=Qualcuno ha bisogno del mio aiuto
 requestTitleLbl=Genera chiave
 requestDescriptionLbl=Si prega di condividere questa chiave con il tuo supporter e attendere per la connessione.
 requestKeyGeneratorPane= Generazione chiave
-requestGeneratedKeyFld=Chiave viene generata…
+requestGeneratedKeyFld=Chiave viene generata\uFFFD
 requestPredefinedAdressessPane=Indirizzi predefiniti
 requestStatusLblWaiting=Attesa ...
 requestStatusLblReady=Pronto!
 
 #SupportView
 supportTitleLbl=Inserire chiave
-supportDescriptionLbl=Per avviare una nuova connessione di supporto remoto immettere la frase chiave generata è condivisa dal partner.
+supportDescriptionLbl=Per avviare una nuova connessione di supporto remoto immettere la frase chiave generata \uFFFD condivisa dal partner.
 supportConnectBtn=Connesso
 supportKeyInputPane=Inserire chiave
 supportAdressBookPane=Avviare servizio
 supportStatusLblWaiting=In attesa ...
 supportStatusLblReady=Pronto!
-requestSupporterDescriptionLbl=Scegliere il supporter di aiuto. È inoltre possibile aggiungere un nuovo supporter o modificare uno esistente. Per favore contattare il proprio supporter per i dettagli della connessione.
+requestSupporterDescriptionLbl=Scegliere il supporter di aiuto. \uFFFD inoltre possibile aggiungere un nuovo supporter o modificare uno esistente. Per favore contattare il proprio supporter per i dettagli della connessione.
 
 #StartServiceView
 startServiceBtn=Avviare servizio
 startServiceTitleLbl=Avviare servizio
-startServiceDescpriptionLbl=Il suo partner può connettersi soltanto attraverso la rubrica se lei avvia il servizio prima.
+startServiceDescpriptionLbl=Il suo partner pu\uFFFD connettersi soltanto attraverso la rubrica se lei avvia il servizio prima.
 
 #PopOver
-supportHelpLbl=Generazione chiavi - creazione di connessione\n\nPer creare una connessione tra di voi e il suo supporter è necessario generare una chiave e condividerla con il proprio supporter. Il tuo supporter utilizzerà questa chiave per connettersi con il suo dispositivo.\n\nBarra di stato \n\n La barra di stato alla fine della finestra mostra se esiste una possibilità di creare una connessione.\n\nVerde: Possibile stabilire la connessione. \nArancione: Non è ancora possibile stabilire una connessione. \n\nPer favore contatti il suo supporter se non è possibile creare una connessione.
-requestHelpLbl=Inserimento chiave - creazione connessione\n\nPer stabilire una connessione è necessario la chiave generata dal partner. Inserisci la chiave nel campo di testo a sinistra e premere \u0022Connect \u0022 per stabilire una connessione.\n\nBarra di stato\n\nLa barra di stato alla fine della finestra mostra se esiste una possibilità di creare una connessione.\n\nVerde: Possibile stabilire una connessione.\nArancione: Non è ancora possibile stabilire una connessione.\n\nPer favore contattare imedias se non è possibile creare una connessione.
-homeHelpLbl=Qui può scegliere tra le opzioni \u0022Ho bisogno di aiuto\u0022 e \u0022 Desidero aiutare qualcuno \u0022.\n\nPremere su \u0022Ho bisogno di aiuto\u0022 se un supporter deve connettersi con il suo dispositivo.\n\nDesidero aiutare qualcuno se desiderate connettersi con un computer di un'altra persona da aiutare.
+supportHelpLbl=Generazione chiavi - creazione di connessione\n\nPer creare una connessione tra di voi e il suo supporter \uFFFD necessario generare una chiave e condividerla con il proprio supporter. Il tuo supporter utilizzer\uFFFD questa chiave per connettersi con il suo dispositivo.\n\nBarra di stato \n\n La barra di stato alla fine della finestra mostra se esiste una possibilit\uFFFD di creare una connessione.\n\nVerde: Possibile stabilire la connessione. \nArancione: Non \uFFFD ancora possibile stabilire una connessione. \n\nPer favore contatti il suo supporter se non \uFFFD possibile creare una connessione.
+requestHelpLbl=Inserimento chiave - creazione connessione\n\nPer stabilire una connessione \uFFFD necessario la chiave generata dal partner. Inserisci la chiave nel campo di testo a sinistra e premere "Connect " per stabilire una connessione.\n\nBarra di stato\n\nLa barra di stato alla fine della finestra mostra se esiste una possibilit\uFFFD di creare una connessione.\n\nVerde: Possibile stabilire una connessione.\nArancione: Non \uFFFD ancora possibile stabilire una connessione.\n\nPer favore contattare imedias se non \uFFFD possibile creare una connessione.
+homeHelpLbl=Qui pu\uFFFD scegliere tra le opzioni "Ho bisogno di aiuto" e " Desidero aiutare qualcuno ".\n\nPremere su "Ho bisogno di aiuto" se un supporter deve connettersi con il suo dispositivo.\n\nDesidero aiutare qualcuno se desiderate connettersi con un computer di un'altra persona da aiutare.
 
 #Dialog
 dialogTitleText=Dettagli sul supporter
@@ -78,13 +78,13 @@ dialogEncryptedLbl=Criptato
 
 #Settings
 supportCompressionLbl=Compressione
-supportQualityLbl=Qualità
+supportQualityLbl=Qualit\uFFFD
 supportBgr233Lbl=BGR233
 requestViewOnlyLbl=Solo leggere
-bgr233DescriptionLbl=Questa opzione riduce la qualità della connessione.
+bgr233DescriptionLbl=Questa opzione riduce la qualit\uFFFD della connessione.
 
 #ExpertSettings
-expertSettingsDialogTitle=Proprietà avanzate
+expertSettingsDialogTitle=Propriet\uFFFD avanzate
 expertForceConnectOverServerLbl=Forza connessione tramite server
 expertKeyserverIpLbl=Indirizzo IP del server chiavi
 expertKeyserverHttpLbl=Porta HTTP del server chiavi
@@ -96,3 +96,6 @@ expertStunServerPortLbl=Porta stunserver
 expertStunserverLbl=Stunservers
 expertSettingsBtn=Impostazioni avanzate
 settingsTitleLbl=Impostazioni avanzate
+
+# Supporter FIXME: Right translation
+supporterNameInformationDialog=Si prega di compilare il campo Nome. 
